Fix dropdown on mobile not working properly

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -1,7 +1,7 @@
 .dropdown-menu{
     .dropdown-item{
         &.active{
-            background-color: #eee;
+            background-color: #f3f3f3;
             color: $black;
         }    
     }
@@ -10,6 +10,7 @@
         position: fixed;
         left: 0;
         right: 0;
+        top: auto;
         width: 100%;
     }
 
